# abm-firm-dynamics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
_archive/: ee_rts.ipynb
docs/source/: conf.py  index.rst  src.models.rst  src.rst
research/: axtell_2016.ipynb  firm_dynamics.ipynb
research/models/: firms_model_ee.ipynb
src/: config.py  main.py
src/models/: firm.py  market.py  worker.py
src/utilities/: data_collection.py
tests/: test_firm.py  test_market.py  test_worker.py
