[tool.poetry]
name = "abm-firm-dynamics"
version = "0.1.0"
description = "Agent based model of firm dynamcis."
authors = ["Greg Barbieri <gfbarbieri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
agentpy = "^0.1.5"
pandas = "^2.2.3"
statsmodels = "^0.14.4"
sphinx = "^8.1.3"
ipykernel = "^6.29.5"
mesa = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
